[Wayland] Bookmarks menu popup has margin at the top
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox96 | --- | wontfix |
firefox97 | --- | verified |
firefox98 | --- | verified |
People
(Reporter: viktor_jaegerskuepper, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
16.47 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
When the bookmarks menu icon is placed on the right side of the toolbar, its popup has a certain margin at the top so that it is not attached to the button. This is a regression which I only noticed today unfortunately.
Result given by mozregression:
Last good revision: 15d728e6c31d95844e23d9a9569e6dab8a7afeae
First bad revision: 208b8d7b09f96b5e46cf3be1d57426b51bf59a6b
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=15d728e6c31d95844e23d9a9569e6dab8a7afeae&tochange=208b8d7b09f96b5e46cf3be1d57426b51bf59a6b
This points to bug 1739383.
OS: Arch Linux
Seen with Gnome and KDE
Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Can you test latest nightly?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Testing_Mozilla_binaries
Also do you run X11 or Wayland?
Thanks.
Assignee | ||
Comment 2•3 years ago
|
||
I can repro. Can take a look. If I make this rule use margin-bottom
it works, so I probably messed up my signs in the regressing bug.
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
And apply the same fix for left/right.
Assignee | ||
Comment 4•3 years ago
|
||
This was useful so may as well land it. Need to use mozilla::Side in the
header because otherwise it is ambiguous with mozilla::ipc::Side, yay
C++.
Depends on D135562
Comment 6•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/aa25264bddfe
https://hg.mozilla.org/mozilla-central/rev/3b3df9fb7bcf
Updated•3 years ago
|
Comment 7•3 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Assignee | ||
Comment 8•3 years ago
|
||
Comment on attachment 9258412 [details]
Bug 1749390 - Deal with mismatched margin-top/bottom correctly on Wayland popup code. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple tweak to fix popups that have mismatched margins (which are ~none, except this one apparently :))
- String changes made/needed: none
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
Comment on attachment 9258412 [details]
Bug 1749390 - Deal with mismatched margin-top/bottom correctly on Wayland popup code. r=stransky
Approved for 97.0b3.
Updated•3 years ago
|
Comment 10•3 years ago
|
||
bugherder uplift |
Comment 11•3 years ago
|
||
I only have Ubuntu (on Wayland) at my disposal but I could not reproduce this issue using an affected build so I can't actually verify that this is indeed fixed on latest builds. Victor, would you mind verifying if this issue is fixed for you on the latest Nightly build and Beta build?
Reporter | ||
Comment 12•3 years ago
|
||
Verified fixed on 97.0b4 and on latest Nightly 98.0a1 build (20220117035808), tested with both Gnome and KDE on Arch Linux.
Comment 13•3 years ago
|
||
Thank you very much for your verification Viktor.
Updated•3 years ago
|
Description
•