Bug 1749390 - Deal with mismatched margin-top/bottom correctly on Wayland popup code. r=stransky, a=RyanVM

And apply the same fix for left/right.

Differential Revision: https://phabricator.services.mozilla.com/D135562